Fixed an annoying bug related to the offscreen tracker

--- a/project05 - stopwatch/style.css
+++ b/project05 - stopwatch/style.css
@@ -20,7 +20,6 @@ body {
     background-color: hsl(0, 0%, 0%, 0.8);
     padding: 20px;
     border-radius: .5rem;
-    width: 100%;
     margin: auto;
     position: absolute;
     visibility: hidden;
